# data_profiling_project

./: README.md  dashboard.py  main.py  pyproject.toml
backend/: data_processing.py  pyproject.toml
backend/src/: main.py
data/: bfi-weekend-box-office-report-2024-02-16-18.xlsx
docs/: todo.md
frontend/: main_window.py
tests/: test_main.py
