[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["craig <73603201+craig-lilley@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.2"
numpy = "^1.26.4"
pyarrow = "^15.0.0"
openpyxl = "^3.1.2"
pyqt6 = "^6.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
