[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["craig <73603201+craig-lilley@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
